k3s/generated_manifests/whisper/Namespace-whisper.yaml
apiVersion: v1
kind: Namespace
metadata:
  annotations:
    argocd.argoproj.io/sync-options: Prune=false
  name: whisper
