k3s/generated_manifests/whisper/Service-whisper.yaml
apiVersion: v1
kind: Service
metadata:
  name: whisper
  namespace: whisper
spec:
  ports:
    - name: wyoming
      port: 10300
      targetPort: 10300
  selector:
    app: whisper
  type: ClusterIP
